--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
   "author": "Alyosha Khlebnikov <murano.takashi1126@gmail.com>",
   "license": "MIT",
   "engines": {
-    "node": "14.17.2"
-  },
+    "node": "16.10.0",
+    "npm": "7.24.0"
+  }
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js",
