--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "delivery-tracker-backend",
+  "name": "sophon-builer",
   "version": "1.0.0",
   "main": "index.js",
-  "repository": "https://github.com/Credit-First/Gunbot-Configurator.git",
-  "author": "Alyosha Khlebnikov <murano.takashi1126@gmail.com>",
+  "repository": "",
+  "author": "",
   "license": "MIT",
   "engines": {
     "node": "16.10.0",
     "npm": "7.24.0"
-  }
+  },
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js",
@@ -19,35 +19,15 @@
     "axios": "^0.27.2",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.0",
-    "ccxtpro.kc": "git+https://github.com/Credit-First/ccxtpro.KC.git",
     "cloudscraper": "^4.6.0",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
-    "db-migrate-mysql": "^2.2.0",
     "dotenv": "^16.0.1",
-    "email-templates": "^9.0.0",
     "express": "^4.18.1",
-    "express-jwt": "^7.7.5",
-    "joi": "^17.6.0",
-    "mysql2": "^2.3.3",
-    "nodemailer": "^6.7.6",
-    "okgunbot_wrapper": "git+https://github.com/Credit-First/okGunbot_wrapper.git",
-    "pug": "^3.0.2",
-    "qrcode": "^1.5.0",
-    "randomstring": "^1.2.2",
     "request": "^2.88.2",
-    "rootpath": "^0.1.2",
-    "sequelize": "^6.20.1",
-    "speakeasy": "^2.0.0"
+    "rootpath": "^0.1.2"
   },
-  "keywords": [
-    "node",
-    "express",
-    "delivery",
-    "tracker",
-    "crefit-first"
-  ],
   "bin": "index.js",
   "devDependencies": {
     "husky": "^8.0.1",
